--- a/.gitignore
+++ b/.gitignore
@@ -1,76 +1,38 @@
-### Node / Package managers
+# Dependencies
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
+package-lock.json
 
-### Build / Output
+# Build output
 dist/
-build/
-out/
-lib/
 *.tsbuildinfo
 
-### Logs
+# Logs
 logs/
 *.log
+npm-debug.log*
 .logs/
 
-### Environment
+# Backups
+.backups/
+
+# Testing
+coverage/
+.nyc_output/
+
+# Environment
 .env
 .env.local
 .env.*.local
 
-### Coverage
-coverage/
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
 
-### Caches
-.cache/
-/.parcel-cache/
-
-### Temporary files
+# Temporary files
+*.tmp
 tmp/
 temp/
-.backups/
-*.tmp
-*.temp
-*.swp
-*.bak
-
-### OS generated files
-.DS_Store
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-$RECYCLE.BIN/
-.AppleDouble
-.LSOverride
-
-### IDEs and editors
-.vscode/
-.history/
-.idea/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.iml
-*.code-workspace
-
-### Node binaries
-node_modules/.bin/
-
-### Misc
-coverage/
-out/
-/.turbo
-sentry-cli
-ormconfig.json
-
-# Keep lockfiles under source control by default. Uncomment if you want to ignore them.
-# package-lock.json
-# yarn.lock
-# pnpm-lock.yaml
-
-# Project-specific ignores can be added below
