--- a/package.json
+++ b/package.json
@@ -22,20 +22,20 @@
     "audit": "npm audit --production"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^0.6.0",
+    "@modelcontextprotocol/sdk": "^1.20.1",
     "fast-glob": "^3.3.2"
   },
   "devDependencies": {
-    "@types/node": "^24.8.1",
     "@types/jest": "^30.0.0",
+    "@types/node": "^24.8.1",
     "@typescript-eslint/eslint-plugin": "^8.46.0",
     "@typescript-eslint/parser": "^8.46.0",
-    "eslint": "^9.0.0",
-    "jest": "^29.7.0",
+    "eslint": "^9.38.0",
+    "jest": "^30.2.0",
+    "rimraf": "^6.0.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "rimraf": "^5.0.5"
+    "typescript": "^5.3.3"
   },
   "keywords": [
     "mcp",
