--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ npm-debug.log*
 
 # Backups
 .backups/
+_doc_backup_before_reorganization/
 
 # Testing
 coverage/
@@ -36,3 +37,6 @@ coverage/
 *.tmp
 tmp/
 temp/
+
+# Documentation backup (optional to ignore)
+REORGANIZATION_COMPLETE.md
